# ahab

./: .gitignore  Cargo.toml  README.md  book.toml  rust-toolchain.toml
.github/workflows/: book.yml  build.yml  extras.yml
crates/ahab/: Cargo.toml  README.md
crates/ahab_stm32/: Cargo.toml
crates/ahab_stm32/.cargo/: config.toml
crates/ahab_stm32f11ve/: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs
crates/ahab_stm32f11ve/.cargo/: config.toml
crates/ahab_stm32f11ve/src/: compass.rs  gyro.rs  main.rs
docs/: SUMMARY.md  book.toml  captains-log.md  design.md  getting-started.md  introduction.md
docs/captains-log/: 2024-12-18.md  2024-12-20.md  2024-12-21.md  2025-01-05.md
docs/design/: hardware.md  sensors.md  structure.md  system-architecture.md
docs/dev/log/: 2024-12-17.md  2024-12-19.md  2024-12-20.md  2024-12-21.md  2025-01-05.md
docs/hello-world/: blinky.md  down-detector.md
docs/src/: SUMMARY.md  introduction.md
docs/src/design/: Device Interface Module (DIM).md  Emulation.md  List of sensor candidates.md  Main Computer (MC).md  Physics Simulation.md  System Sketch.md  device-interface-module.md  emulators.md  list-of-sensor-candidates.md  main-flight-computer.md  sensors-to-use.md  simulation.md  system-sketch.md
docs/src/hello-world/: blinky.md
docs/src/log/: 2024-12-17.md  2024-12-18.md  2024-12-19.md  2024-12-20.md  2024-12-21.md  2025-01-05.md  2025-01-11.md  2025-01-23.md  2025-02-05.md  2025-02-16.md
docs/src/templates/: daily-note.md
docs/stm32/: blinky.md  debugging.md  down-detector.md  getting-started.md
