[workspace]
resolver = "2"
members = ["crates/ahab", "crates/ahab_msp432"]

[workspace.package]
authors = ["Philip Linden <philiplinden@gmail.com>"]
edition = "2021"
license-file = "LICENSE-APACHE"
license = "MIT or Apache-2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
