[package]
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "ahab_stm32f11ve"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
rtt-target = { version = "0.6.1", features = ["log"] }

[[bin]]
name = "ahab_stm32f11ve"
test = false
bench = false
