cargo-features = ["per-package-target"]

[package]
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "ahab_stm32f11ve"
version = "0.1.0"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.5"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "memory-x",
    "rt",
    "stm32f411ve",
    "time",
    "time-driver-tim4",
] }
embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "integrated-timers",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-abort = "0.3.2"
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

[[bin]]
name = "ahab_stm32f11ve"
test = false
bench = false

[[bin]]
name = "blinky"
test = false
bench = false
